# Practice-ML-DEV

./: .gitignore  Case_6_Fandeev.ipynb  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  MLserv.ipynb  Pipfile  README.md  app.py  apy.yaml  catboost_model.pkl  compose.yaml  create_db.py  data_preprocessing.py  database.py  docker-compose.yaml  index.html  linear_regression_model.joblib  main.py  ml  ml_Krasikova.txt  ml_models.py  model.ipynb  model_log.pkl  model_tree.pkl  models.ipynb  project.html  pyproject.toml  requirements.txt  schema.py  Аналитика_товаров.ipynb
.github/: pull_request_template.md
HW2/: swagger.yaml
HW_1 Teplov/: HW_1_EDA_and_Models_Теплов.ipynb  catboost.pkl  log_reg.pkl  naive_bayes.pkl
HW_2 Teplov/: api_design.yaml  db_PostgreSQL.sql  db_diagram.py
HW_3/: README.md  app.py  requirements.txt
HW_4/: README.md  main.py  requirements.txt  web.sql
ML_models/: ML_models.ipynb
Siniaev_project/: models_training.ipynb
app/: Dockerfile  Dockerfile-bot  Dockerfile-worker  Makefile  celery_config.py  celery_instance.py  docker-compose.yml  main.py  requirements.txt
assignment 1/: cirrhosis_predictions.ipynb
backend/: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  main.py  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt  temp.db
backend/api/v1/: routes.py
backend/api/v1/endpoints/: admin.py  auth.py  billing.py  prediction.py
backend/core/: celery_worker.py  config.py  container.py  database.py  dependencies.py  exceptions.py  security.py
backend/model/: base_model.py  prediction.py  prediction_batch.py  predictor.py  transaction.py  user.py
backend/models/: catboost.model
backend/repository/: base_repository.py  billing_repository.py  prediction_repository.py  predictor_repository.py  user_repository.py
backend/schema/: auth_schema.py  base_schema.py  billing_schema.py  prediction_schema.py  predictor_schema.py  user_schema.py
backend/services/: auth_service.py  base_service.py  billing_service.py  prediction_service.py  predictor_service.py  user_service.py
backend/src/: auth.py  logger.py  main.py  settings.py  tasks.py
backend/src/database/: __init__.py  base.py  model.py  predictions.py  session_manager.py  user.py
backend/src/database/migrations/: env.py
backend/src/database/migrations/versions/: 2023-12-09_ca8a994c0b32_init.py  2023-12-26_01efd5123f7b_change_model_data.py  2023-12-26_d781d07408ca_init.py
backend/src/repository/: model.py  predictions.py  user.py
backend/src/router/: __init__.py  auth.py  model.py  predictions.py  user.py
backend/src/schemes/: auth.py  model_schemes.py  prediction_schemes.py  router.py  user_scemes.py  user_schemes.py
backend/utils/: date.py  schema.py
cases/case_3/: ML_anomaly_detection.ipynb  pyproject.toml
cases/case_3/models/: HBOS_model.joblib  LSCP_model.joblib  MCD_model.joblib
configs/: db_diagram.io
course-site/: _config.yml  lectures.md  materials.md  project.md
data/: TUANDROMD.csv  case_1.md  model__logreg__count_min_df_20_v1.joblib  prepared_data.csv  results.json
docs/: architecture_scheme.md  openapi.json  user_docs.md
experiments/: base.ipynb
frontend/: .gitignore  .pdm-python  Dockerfile  Makefile  app.py  docker-compose.yaml  pyproject.toml  requirements-dev.txt
frontend/callbacks/: callbacks.py
frontend/data/: local_data.py  remote_data.py
frontend/layouts/: admin_layout.py  billing_layout.py  prediction_layout.py  sign_in_layout.py  sign_up_layout.py
frontend/src/: logger.py  main.py  requests.py  settings.py
frontend/src/api_client/: __init__.py  client.py  types.py
frontend/src/api_client/api/model/: __init__.py  get_models_v1_model_get.py
frontend/src/api_client/api/prediction/: __init__.py  get_prediction_v1_prediction_predict_prediction_id_get.py  get_user_predictions_v1_prediction_get.py  predict_v1_prediction_predict_post.py
frontend/src/api_client/api/user/: __init__.py  login_v1_user_login_post.py  me_v1_user_me_get.py  signup_v1_user_signup_post.py
frontend/src/api_client/models/: __init__.py  available_models.py  body_login_v1_user_login_post.py  model_list_scheme.py  model_scheme.py  prediction_item.py  prediction_scheme.py  request_prediction.py  sing_up_request.py  token.py  user_scheme.py
frontend/src/pages/: login.py  main_page.py
frontend/ui_kit/: styles.py  utils.py
frontend/ui_kit/components/: error_message.py  navigation.py  user_balance.py
full_project/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  sqlite.db
full_service/: docker-compose.yml  tmp.ipynb
homeworks/: HW1.ipynb
hw1/: cb_model.pickle  hw1.ipynb  logreg.pickle  svm.pickle
hw_1/: ML_practice_hw_1.ipynb  model.ipynb  model1.pkl  model2.pkl  model3.pkl  model_lgbm.joblib  model_lr.joblib  model_rf.joblib
hw_2/: api.yaml
main/: requirements.txt
malware_classification_project/: .gitignore
model/: data.csv  model.ipynb
models/: RandomForestClassifier.joblib  XGBClassifier.joblib  best_gb_model.pkl  best_knn_model.pkl  best_svm_model.pkl  best_tree_model.pkl  catboost_class.pkl  cb.pkl  forest_model.pkl  lg.pkl  lgb_model.pkl  linreg.pkl  log_reg_model.pkl  lr_model.pkl  main.ipynb  model.pkl  model__forest__count_min_df_20_v1.joblib  model__logreg__count_min_df_20_v1.joblib  model__tree__tfidf_v1.joblib  tree_model.pkl
notebook/: d4_ml.ipynb
notebooks/: EDA-Safonov-NI.ipynb  ML_Service_Case_5.ipynb  ML_part.ipynb  case_2.ipynb  case_4_eda.ipynb  data_processing.ipynb  eda_and_fit.ipynb  hw1.ipynb  malware_classification.ipynb  model_fitting.ipynb  models_training.ipynb  prepare_the_data.ipynb  product_classification.ipynb  research.ipynb
project/: main.py  test.db  (+1 more)
vklepov/: .pre-commit-config.yaml  DESIGN.md  README.md  TUANDROMD.csv  malware-classifier.ipynb  pyproject.toml
vklepov/models/: logistic-regression.joblib
vklepov/src/api/: __init__.py  crud.py  database.py  main.py  models.py  router.py  schemas.py  users.py
vklepov/src/prediction/: __init__.py  main.py  models.py
(+312 files in other folders)
