[tool.poetry]
name = "practice-ml-dev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pandas = "^2.1.2"
jupyter = "^1.0.0"
numpy = "^1.26.1"
catboost = "^1.2.2"
ipywidgets = "^8.1.1"
shap = "^0.43.0"
seaborn = "^0.13.0"
optuna = "^3.4.0"
scikit-learn = "^1.3.2"
phik = "^0.12.3"
dill = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
