[tool.poetry]
name = "malware-app"
version = "0.1.0"
description = ""
authors = ["Vladimir Klepov <vklepov@ozon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pre-commit = "^3.4.0"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
