[tool.poetry]
name = "ml-research"
version = "0.1.0"
description = ""
authors = ["Anton Shiryaev <med.phisiker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
scipy = "^1.11.4"
ipykernel = "^6.27.1"
matplotlib = "^3.8.2"
pyod = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
